# rasp-eye

./: .gitignore  CMakeLists.txt  Client.c  Makefile  README.md  Server.c  ngrok.conf
CLIENT/: CLIENT  CMakeCache.txt  CMakeLists.txt  Client.c  ClientConfig.h  ClientConfig.h.in  Makefile  cmake_install.cmake  install_manifest.txt
CLIENT/WRAP/: Makefile  Wrap.h  cmake_install.cmake
SERVER/: CMakeLists.txt  SERVER  Server.c  ServerConfig.h  ServerConfig.h.in
SERVER/WRAP/: CMakeLists.txt  Wrap.c
rasp_detection/darknet_modify/: Makefile  Makefile.back  darknet
rasp_detection/darknet_modify/examples/: darknet.c  detector.c
rasp_detection/darknet_modify/h264decoder/: H264Decoder.cpp  H264Decoder.h  video_decode.cpp
rasp_detection/darknet_modify/include/: darknet.h
rasp_detection/darknet_modify/mjpg-streamer/: CMakeLists.txt  mjpg_streamer.c  mjpg_streamer.h  utils.c  utils.h
rasp_detection/darknet_modify/mjpg-streamer/cmake/: mjpg_streamer_utils.cmake
rasp_detection/darknet_modify/mjpg-streamer/plugins/: input.h
rasp_detection/darknet_modify/mjpg-streamer/plugins/input_opencv/: CMakeLists.txt  input_opencv.cpp
rasp_detection/darknet_modify/src/: demo.c  gemm.c  image.c
src/: CMakeLists.txt  CamH264VideoStreamFramer.cpp  CamH264VideoStreamFramer.h  H264LiveVideoServerMediaSubsession.cpp  H264LiveVideoServerMediaSubsession.h  main.cpp  x264_encoder.cpp  x264_encoder.h
